# humblegen-rs

./: .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  default.nix  sample.humble
.github/workflows/: ci.yml
docs/humblespec/: data_types_json_representation.md  humblespec.md
example/: Cargo.toml  build.rs
example/src/: api_impl.rs  main.rs
humblegen/: Cargo.toml  Humble.sublime-syntax
humblegen-rt/: Cargo.toml
humblegen-rt/src/: deser_helpers.rs  handler.rs  lib.rs  regexset_map.rs  serialization_helpers.rs  server.rs  service_protocol.rs
humblegen/src/: ast.rs  backend.rs  cli.rs  elm.rs  humble.pest  lib.rs  main.rs  parser.rs  rust.rs
humblegen/src/backend/: docs.rs  elm.rs  rust.rs
humblegen/src/backend/docs/: endpoint-properties.html  endpoint.html  external_body.html  external_head.html  main.css  page_head.html  preamble.partial.html  script.js  service.html  tabs.html  tabs_body.html  tabs_tab.html  typedef_for_language.html  typedef_table_enum.html  typedef_table_enum_field.html  typedef_table_struct.html  typedef_table_struct_field_or_tuple_el.html  userDefinedType.html  user_defined_type_listing.html
humblegen/src/backend/elm/: builtin_service.elm  builtin_type_bytes.elm  builtin_type_uuid.elm  decoder_generation.rs  encoder_generation.rs  endpoint_generation.rs  module_header.elm  preamble_decoder.elm  preamble_encoder.elm  preamble_service.elm  preamble_types.elm  type_generation.rs  utils_services.elm  utils_types.elm
humblegen/src/backend/rust/: service_server.rs
humblegen/src/parser/: embeds.rs
humblegen/src/rust/: rustfmt.rs  service_server.rs
humblegen/tests/: rust.rs
humblegen/tests/rust/embeds/: main.rs  spec.humble  spec.rs
humblegen/tests/rust/service/: main.rs  spec.humble  spec.rs
humblegen/tests/rust/service-authorization-using-interceptor/: main.rs  spec.humble  spec.rs
humblegen/tests/rust/showcase/: main.rs  spec.humble  spec.rs
humblespec/: data_types_json_representation.md  humblespec.md  rust.md  service_protocol.md
src/: ast.rs  cli.rs  elm.rs  humble.pest  lib.rs  main.rs  parser.rs  rust.rs  sample.humble  util.rs
tests/: rust.rs
tests/rust/showcase/: main.rs  spec.humble
