[package]
name = "humblegen"
version = "0.3.0"
license = "Apache-2.0 OR MIT"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
description = "An experimental code-generator in the vain of protobuf, but a little more humble."

[dependencies]
Inflector = "0.11.4"
argh = "0.1.3"
itertools = "0.8.2"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro2 = "1.0.8"
quote = "1.0.3"

[dev-dependencies]
anyhow = "1.0.28"
trybuild = "1.0.27"
tempfile = "3.1.0"

# the following crates are required by the generated code
# (this is the authoritative source for generated-code's dependencies)
serde = { version = "1.0.110", features = [ "derive" ] }
chrono = { version = "0.4", features = ["serde"] }

# the following crates are used by integration tests
serde_json = "1.0"