[package]
name = "humblegen"
version = "0.3.0"
license = "Apache-2.0 OR MIT"
authors = [
    "Marc Brinkmann <git@marcbrinkmann.de>",
    "Christian Schwarz <me@cschwarz.com>",
    "Reiner Dolp <git@reinerdolp.com>",
]
edition = "2018"
description = "An experimental code-generator in the vain of protobuf, but a little more humble."

[dependencies]
Inflector = "0.11.4"
argh = "0.1.3"
itertools = "0.9"
log = "0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
proc-macro2 = "1.0.8"
quote = "1.0.3"
syn = "1.0.17"
which = { version = "3", optional = true }
base64 = "0.12.1"
comrak = "0.7"
anyhow = "1.0"
thiserror = "1.0"


[dev-dependencies]
trybuild = "1.0.27"
tempfile = "3.1.0"
serde_json = "1.0"

# for trybuild in tests/rust.rs
async-trait-with-sync = { git = "https://github.com/49nord/async-trait.git", rev = "3a4d80f667b78a62f0c57f2524100dafd6b01c31" }
humblegen-rt = { path = "../humblegen-rt" }
serde = { version = "1.0.110", features = [ "derive" ] }
tokio = { version = "0.2.20", features = ["full"] }

[features]
default = [ "which-rustfmt" ]
which-rustfmt = [ "which" ]
